fix: fix code overflow behavior

--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -11,7 +11,7 @@ body {
     overflow: hidden;
 }
 .wrapper {
-    width: 1280px;
+    max-width: 1280px;
     margin: 0 auto;
 }
 .ul {
